# controllers/Book.js
@@ -15,6 +15,7 @@ module.exports.bookIdGET = function bookIdGET (req, res, next) {
 };
 
 module.exports.booksGET = function booksGET (req, res, next) {
+  console.log("Ciaoaooaoaoaoao   function booksGET (req, res, next)");
   Book.booksGET()
     .then(function (response) {
       utils.writeJson(res, response);
@@ -35,20 +36,9 @@ module.exports.booksIdAuthorGET = function booksIdAuthorGET (req, res, next) {
     });
 };
 
-module.exports.booksPOST = function booksPOST (req, res, next) {
-  var body = req.swagger.params['body'].value;
-  Book.booksPOST(body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.booksPUT = function booksPUT (req, res, next) {
-  var body = req.swagger.params['body'].value;
-  Book.booksPUT(body)
+module.exports.booksIdEventGET = function booksIdEventGET (req, res, next) {
+  var id = req.swagger.params['id'].value;
+  Book.booksIdEventGET(id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
