# service/AuthorService.js
@@ -1,6 +1,30 @@
 'use strict';
 
 
+let sqlDb;
+
+exports.authorsDbSetup = function(database) {
+  sqlDb = database;
+  return database.schema.hasTable("authors").then(exists => {
+    if (!exists) {
+      //console.log("It doesn't so we create it");
+      return database.schema.createTable("authors", table => {
+        //table.increments();
+        table.increments("id").primary();
+        table.string("name");
+        table.string("surname");
+        table.text("biography");
+      });
+    }
+    else{
+      //console.log("table already exists");
+    }
+  });
+};
+
+
+
+
 /**
  * Finds authors
  * Get author
@@ -8,26 +32,11 @@
  * returns List
  **/
 exports.authorGET = function() {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = [ {
-  "id" : 5,
-  "name" : "Joanne",
-  "surname" : "Rowling",
-  "biography" : "Author of the famous Harry Potter books"
-}, {
-  "id" : 5,
-  "name" : "Joanne",
-  "surname" : "Rowling",
-  "biography" : "Author of the famous Harry Potter books"
-} ];
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
+  return sqlDb("authors")
+      .then(data => {
+        return data
+      });
+};
 
 
 /**
@@ -55,32 +64,6 @@ exports.authorIdGET = function(id) {
 
 
 /**
- * Add a new author to the store
- *
- * body Author Author to add to the database
- * no response value expected for this operation
- **/
-exports.authorPOST = function(body) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
- * Update an existing author
- *
- * body Author Author to add to the database
- * no response value expected for this operation
- **/
-exports.authorPUT = function(body) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
  * Get the books of an author
  *
  * id Long ID of author of which to get the books
@@ -90,20 +73,18 @@ exports.authorsIdBooksGET = function(id) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = [ {
-  "id" : 0,
-  "title" : "Harry Potter 1",
-  "author" : 5,
-  "price" : 10,
-  "isbn" : "9780747532743",
-  "quantity" : 3
-}, {
-  "id" : 0,
-  "title" : "Harry Potter 1",
-  "author" : 5,
-  "price" : 10,
-  "isbn" : "9780747532743",
-  "quantity" : 3
-} ];
+      "id" : 0,
+      "title" : "Harry Potter 1",
+      "authorId" : 5,
+      "price" : 10,
+      "isbn" : "9780747532743",
+      "genre" : "fantasy",
+      "event" : "0",
+      "quantity" : 3,
+      "publisher" : "Bloomsbury Publishing",
+      "language" : "english",
+      "release" : "1997-06-26"
+    } ];
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
@@ -111,4 +92,5 @@ exports.authorsIdBooksGET = function(id) {
     }
   });
 }
+
 
